full architecture working with view deck with number

--- a/src/MyResources.properties
+++ b/src/MyResources.properties
@@ -1,7 +1,7 @@
 mySqlHostName=localhost:3306
-mySqlUserName=stuart
-mySqlPassword=olonaman
-mySqlDatabase=stuart?characterEncoding=UTF-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true
+mySqlUserName=root
+mySqlPassword=a;sldkfj
+mySqlDatabase=pokemon_db?characterEncoding=UTF-8&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&autoReconnect=true
 mySqlTablePrefix=poke_
 LogLevel=ALL
 LogFile=
